--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -22,10 +22,27 @@
                   <div class="d-flex";>
                       <div class="flex-fill">
                         <div class="card-body">
-                          <div class="font-weight-bold">Date: <%= moment(session.dateAndTime).format('YYYY-MM-DD') %> </div>
-                          <div class="font-weight-bold">Time: <%= moment(session.dateAndTime).format('HH:mm A') %> </div>
-                          <div class="mb-3">Duration: <%= session.duration %></div>
-                          <div class="" id="therapistName">Therapist: <%= session.therapistName %></div>
+
+                          <div class="flex-container" style="display: flex;">
+                            <div class="font-weight-bold" style="font-weight: 500;">Date:&nbsp;</div>
+                            <div class="font-weight-bold"><%= moment(session.dateAndTime).format('YYYY-MM-DD') %> </div>
+                          </div>
+  
+                          <div class="flex-container" style="display: flex;">
+                            <div class="font-weight-bold" style="font-weight: 500;">Time:&nbsp;</div>
+                            <div class="font-weight-bold"><%= moment(session.dateAndTime).format('HH:mm A') %></div>
+                          </div>
+  
+                          <div class="flex-container" style="display: flex;">
+                            <div class="font-weight-bold" style="font-weight: 500;">Duration:&nbsp;</div>
+                            <div class="mb-3"><%= session.duration %></div>
+                          </div>
+  
+                          <div class="flex-container" style="display: flex;">
+                            <div class="font-weight-bold" style="font-weight: 500;">Therapist:&nbsp;</div>
+                            <div class="" id="therapistName"><%= session.therapistName %></div>
+                          </div>
+
                         </div>
                       </div>
                       <div class="d-flex justify-content-center align-items-center">
@@ -64,9 +81,27 @@
                   <div class="d-flex";>
                       <div class="flex-fill">
                         <div class="card-body">
-                          <div class="font-weight-bold">Date: <%= moment(session.dateAndTime).utc().format('YYYY-MM-DD HH:mm A') %> </div>
-                          <div class="mb-3">Duration: <%= session.duration %></div>
-                          <div class="" id="customerName">Patient: <%= session.customerName %></div>
+
+                          <div class="flex-container" style="display: flex;">
+                            <div class="font-weight-bold" style="font-weight: 500;">Date:&nbsp;</div>
+                            <div class="font-weight-bold"><%= moment(session.dateAndTime).format('YYYY-MM-DD') %> </div>
+                          </div>
+  
+                          <div class="flex-container" style="display: flex;">
+                            <div class="font-weight-bold" style="font-weight: 500;">Time:&nbsp;</div>
+                            <div class="font-weight-bold"><%= moment(session.dateAndTime).format('HH:mm A') %></div>
+                          </div>
+  
+                          <div class="flex-container" style="display: flex;">
+                            <div class="font-weight-bold" style="font-weight: 500;">Duration:&nbsp;</div>
+                            <div class="mb-3"><%= session.duration %></div>
+                          </div>
+  
+                          <div class="flex-container" style="display: flex;">
+                            <div class="font-weight-bold" style="font-weight: 500;">Patient:&nbsp;</div>
+                            <div class="" id="therapistName"><%= session.customerName %></div>
+                          </div>
+
                         </div>
                       </div>
                       <div class="d-flex justify-content-center align-items-center">
