--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -54,7 +54,7 @@
                           <input type="hidden" name="therapist" id="therapist" value="<%= session.bookingId %>">
                           <input type="hidden" name="patient" id="patient" value="<%= user._id %>">
                           <% } else { %>
-                          <button  class="btn btn-primary" style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm; margin-right: 10px;">Join</button>
+                          <button  disabled class="btn btn-primary" style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm; margin-right: 10px;">Join</button>
                           <% }%>
                         </form>
                       </div>
