--- a/views/reports.ejs
+++ b/views/reports.ejs
@@ -28,7 +28,7 @@
                           </div>
                           <div class="flex-container" style="display: flex;">
                             <div class="font-weight-bold" style="font-weight: 500;">Email:&nbsp;</div>
-                            <div class="font-weight-bold">Every <%= report.email %> </div>
+                            <div class="font-weight-bold"><%= report.email %> </div>
                           </div>
   
                           <div class="flex-container" style="display: flex;">
