--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -1,6 +1,7 @@
 <%- include('./includes/head.ejs') %>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/account.css">
+    <link rel="stylesheet" type="text/css" href="/css/therapist-list.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     </head>
 
@@ -107,6 +108,36 @@
                             Available Session</button>
                     </div>
                 </form>
+
+
+                <% if (user.availableDates.availableDate.length> 0) { %>
+                    <h4 class="text-center" style="margin-bottom: 25px; margin-top: 75px;">Available Sessions</h4>
+                    <div style="display: flex; justify-content: center; align-items: stretch; flex-wrap: wrap;">
+                        <% for (let date of user.availableDates.availableDate) { %>
+                            <div class="profile-card" style="margin-left: 30px; margin-right: 30px; margin-bottom: 60px;">
+    
+                                <div class="name" style="font-size: 18px;"> Date: <%=
+                                        moment(date.time).format('YYYY-MM-DD hh:mm A') %>
+                                </div>
+                                <div class="about">Duration: <%= date.duration %>
+                                </div>
+                                <p style="margin: 15px;"></p>
+                                <div class="buttons text-center" style="display: inline-block;">
+    
+                                    <form action="/delete-session/<%=date._id%>" method="POST">
+                                        <button type="submit" style="margin-bottom: 10px;">Remove Date</button>
+                                        <input type="hidden" name="session" value="<%=date._id%>">
+                                        <input type="hidden" name="email" value="<%=user.email%>">
+                                    </form>
+    
+                                </div>
+    
+                            </div>
+                            <% } %>
+                                <% } else { %>
+                                    <h4 class="text-center" style="margin-bottom: 25px;">No Available Dates.</h4>
+                                    <% } %>
+                    </div>
                 <% } %>
 
 
