added favicon, tests, and did minor ui changes

--- a/views/change-password.ejs
+++ b/views/change-password.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/css/main.css">
 </head>
 
-<body style="background-color: #FEFBF3;">
+<body >
      <%- include('./includes/navbar.ejs') %>
      
      <div class="container">
