--- a/views/edit-group-therapy.ejs
+++ b/views/edit-group-therapy.ejs
@@ -3,7 +3,7 @@
   <link rel="stylesheet" type="text/css" href="/css/account.css">
   </head>
 
-  <body style="background-color: #FEFBF3;">
+  <body>
     <%- include('./includes/navbar.ejs') %>
       <div class="container">
         <form action="/add-group-therapy" method="POST">
