--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -135,7 +135,7 @@
                             </div>
                             <% } %>
                                 <% } else { %>
-                                    <h4 class="text-center" style="margin-bottom: 25px;">No Available Dates.</h4>
+                                    <h4 class="text-center" style="margin-bottom: 25px; margin-top: 75px;">No Available Dates.</h4>
                                     <% } %>
                     </div>
                 <% } %>
