--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,7 +4,7 @@
 
 </head>
 
-<body style="background-color: #FEFBF3; position: relative; ">
+<body position: relative; margin-top: 100px;">
 
   <%- include('./includes/navbar.ejs') %>
   <div class="container"">
