--- a/views/group-therapy.ejs
+++ b/views/group-therapy.ejs
@@ -1,14 +1,13 @@
 <%- include('./includes/head.ejs') %>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <link rel="stylesheet" type="text/css" href="/css/footer.css">
 
 </head>
 
-<body style="background-color: #FEFBF3;">
-
+<body>
   <%- include('./includes/navbar.ejs') %>
+
   <div class="container">
-  <main style="margin-top: 50px;">
+  <main style="margin-top: 100px;">
 
     <% if(user.role === 'admin') { %>
       <div class="text-center">
@@ -19,7 +18,6 @@
 
 
     <% if (groups.length > 0) { %>
-      <div style="display: flex; justify-content: center; align-items: stretch; flex-wrap: wrap;">
       <% for (let group of groups) { %>
         <div class="container">
           <div class="row" >
@@ -79,12 +77,13 @@
           </div>
         </div>
           <% } %>
+          <% } else { %>
+            <h1> No Group Therapies.</h1>
           <% } %>
-      </div>
+    </main>
 
 
 
-  </main>
 </div>
 
 
