--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,10 +1,10 @@
 <div class="footer-basic" style="margin-top: 50px;">
-    <footer>
-      <div class="social container-fluid">
-        <a href="https://www.instagram.com/mosa3da"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.twitter.com/mosa3da"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.facebook.com/mosa3da"><i class="fab fa-facebook-f"></i></a>
-      </div>
-    <p class="copyright">Mosa3da © 2022</p>
-    </footer>
+  <footer>
+    <div class="social container-fluid">
+      <a href="https://www.instagram.com/mosa3da.co"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.twitter.com/mosa3daco"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.facebook.com/mosa3da"><i class="fab fa-facebook-f"></i></a>
     </div>
+  <p class="copyright">Mosa3da © 2022</p>
+  </footer>
+  </div>
