--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -5,3 +5,4 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= pageTitle %></title>
+    <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon"/>
