--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,21 +1,39 @@
 
 
 <div class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #FEFBF3; box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);">
-    <div class="container">
-      <a href="/"> <img src="https://i.imgur.com/8u8uTcl.png" class="logo-image" alt="logo" class="img-fluid"></a>
-      <a href="/" class="navbar-brand"> Mosa3da</a>
+  <div class="container">
+    <a href="/"> <img src="https://i.imgur.com/8u8uTcl.png" class="logo-image" alt="logo" class="img-fluid"></a>
+    <a href="/" class="navbar-brand"> Mosa3da</a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      
-      
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+    
+    
+    <div class="collapse navbar-collapse" id="navbarResponsive">
 
-        <% if (isAuthenticated) { %>
+      <% if (isAuthenticated) { %>
 
-          <% if (user.role ==='customer') { %>
+        <% if (user.role ==='customer') { %>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link <%= pageName === 'dashboard' ? 'active' : '' %>" href="/">My Sessions</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link <%= pageName === 'messages' ? 'active' : '' %>" href="/messages">Messages</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link <%= pageName === 'therapist list' ? 'active' : '' %>" href="/therapists">Therapist List</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link <%= pageName === 'group therapy' ? 'active' : '' %>" href="/group-therapy">Group Therapy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link <%= pageName === 'tests' ? 'active' : '' %>" href="https://screening.mhanational.org/screening-tools/" target="_blank">Psychological Tests</a>
+        </li>
+      </ul>
+      <% } else if (user.role === 'therapist') { %>
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link <%= pageName === 'dashboard' ? 'active' : '' %>" href="/">My Sessions</a>
@@ -24,87 +42,72 @@
             <a class="nav-link <%= pageName === 'messages' ? 'active' : '' %>" href="/messages">Messages</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link <%= pageName === 'therapist list' ? 'active' : '' %>" href="/therapists">Therapist List</a>
+            <a class="nav-link <%= pageName === 'patients' ? 'active' : '' %>" href="/patients">Patients</a>
           </li>
           <li class="nav-item">
             <a class="nav-link <%= pageName === 'group therapy' ? 'active' : '' %>" href="/group-therapy">Group Therapy</a>
           </li>
         </ul>
-        <% } else if (user.role === 'therapist') { %>
+        
+        <% } else { %>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link <%= pageName === 'dashboard' ? 'active' : '' %>" href="/">My Sessions</a>
+              <a class="nav-link <%= pageName === 'applications' ? 'active' : '' %>" href="/applications">Review Applications</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link <%= pageName === 'messages' ? 'active' : '' %>" href="/messages">Messages</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link <%= pageName === 'patients' ? 'active' : '' %>" href="/patients">Patients</a>
+              <a class="nav-link <%= pageName === 'reports' ? 'active' : '' %>" href="/reports">Reports</a>
             </li>
             <li class="nav-item">
               <a class="nav-link <%= pageName === 'group therapy' ? 'active' : '' %>" href="/group-therapy">Group Therapy</a>
             </li>
           </ul>
           
-          <% } else { %>
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link <%= pageName === 'applications' ? 'active' : '' %>" href="/applications">Review Applications</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link <%= pageName === 'reports' ? 'active' : '' %>" href="/reports">Reports</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link <%= pageName === 'group therapy' ? 'active' : '' %>" href="/group-therapy">Group Therapy</a>
-              </li>
-            </ul>
-            
 
-        <% } %>
+      <% } %>
+
+      <ul class="navbar-nav ms-md-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"><%= user.name %></a>
+          <ul class="dropdown-menu">
+            <%if (user.role === 'therapist') { %>
+              <li><a class="dropdown-item text-center" href="/account">Profile & Sessions</a></li>
+              <% } else { %>
+            <li><a class="dropdown-item text-center" href="/account">Profile</a></li>
+            <%  } %>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item text-center" href="/change-password">Change Password</a></li>
+            
+            <%if (user.role !== 'admin') { %>
+            <li><a class="dropdown-item text-center" href="/report">Report a Problem</a></li>
+            <%  } %>
+            <li><a class="dropdown-item text-center" style="color: #FF6961;" href="/logout">Log out</a></li>
+          </ul>
+        </li>
+  </ul>
+
+      <% }  else { %>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link <%= pageName === 'home' ? 'active' : '' %>" href="/">Homepage</a>
+          </li>
+          <li class="nav-item"s>
+            <a class="nav-link <%= pageName === 'therapist list' ? 'active' : '' %>" href="/therapists">Therapist List</a>
+          </li>
+        </ul>
+
 
         <ul class="navbar-nav ms-md-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false"><%= user.name %></a>
-            <ul class="dropdown-menu">
-              <%if (user.role === 'therapist') { %>
-                <li><a class="dropdown-item text-center" href="/account">Profile & Sessions</a></li>
-                <% } else { %>
-              <li><a class="dropdown-item text-center" href="/account">Profile</a></li>
-              <%  } %>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item text-center" href="/change-password">Change Password</a></li>
-              
-              <%if (user.role !== 'admin') { %>
-              <li><a class="dropdown-item text-center" href="/report">Report a Problem</a></li>
-              <%  } %>
-              <li><a class="dropdown-item text-center" style="color: #FF6961;" href="/logout">Log out</a></li>
-            </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="/join-us">Join Us</a>
           </li>
-    </ul>
-
-        <% }  else { %>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="/">What is Mosa3da</a>
-            </li>
-            <li class="nav-item"s>
-              <a class="nav-link <%= pageName === 'therapist list' ? 'active' : '' %>" href="/therapists">Therapist List</a>
-            </li>
-          </ul>
-
-
-          <ul class="navbar-nav ms-md-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/join-us">Join Us</a>
+          <li class="nav-item">
+              <a class="nav-link" href="/signup">Sign Up</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/signup">Sign Up</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/login">Sign In</a>
-              </li>
-        </ul>
-        <% }  %>
-      </div>
+              <a class="nav-link" href="/login">Sign In</a>
+            </li>
+      </ul>
+      <% }  %>
     </div>
   </div>
+</div>
