--- a/views/join-us.ejs
+++ b/views/join-us.ejs
@@ -3,7 +3,7 @@
   </head>
 
 
-  <body style="background-color: #FEFBF3;">
+  <body>
 
     <div class="navbar navbar-expand-lg fixed-top nabvar-light"
       style="background-color: #FEFBF3; box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);"></div>
