--- a/views/patients.ejs
+++ b/views/patients.ejs
@@ -7,7 +7,7 @@
 
 <script src="/js/modal.js" defer></script>
 
-<body style="background-color: #FEFBF3;">
+<body>
     
   <%- include('./includes/navbar.ejs') %>
 
