--- a/views/reports.ejs
+++ b/views/reports.ejs
@@ -4,7 +4,7 @@
 
 </head>
 
-<body style="background-color: #FEFBF3;">
+<body>
 
   <%- include('./includes/navbar.ejs') %>
   <div class="container">
