--- a/views/room.ejs
+++ b/views/room.ejs
@@ -31,7 +31,7 @@
         }
      </style>
   </head>
-  <body style="background-color: #FEFBF3;">
+  <body>
     <%- include('./includes/navbar.ejs') %>
 
 
@@ -51,10 +51,6 @@
                  <div onclick="playStop()" class="main__controls__button main__video_button" style="margin-left: 2%; margin-right: 2%;">
                     <i class="fas fa-video"></i>
                     <span>Stop Video</span>
-                 </div>
-                 <div class="main__controls__button" style="margin-left: 2%; margin-right: 2%;">
-                    <i class="fas fa-comment-alt"></i>
-                    <span>Chat</span>
                  </div>
                  <div class="main__controls__button" style="margin-left: 5%;">
                     <form action="/dashboard" method="GET">
