--- a/views/therapistAccount.ejs
+++ b/views/therapistAccount.ejs
@@ -65,7 +65,11 @@
                                                                                     Hidden
                                                                                 </h5>
                                                                             <% } %>
-                                                                            <% } %>
+                                                                            <% } else { %>
+                                                                                 <h5 class="text-muted f-w-400">
+                                                                                    Hidden
+                                                                                </h5>
+                                                                                <% } %>
                                                 </div>
                                                 <div class="col-sm-6" style="margin-top: 35px;">
                                                     <p class="m-b-10 f-w-600">Gender</p>
