add therapist and fix form bg-color

--- a/views/change-password.ejs
+++ b/views/change-password.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/css/main.css">
 </head>
 
-<body >
+<body style="background-color: #FEFBF3;">
      <%- include('./includes/navbar.ejs') %>
      
      <div class="container">
