--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
   </head>
 
 
-  <body>
+  <body style="background-color: #FEFBF3;">
 
 
     <div class="navbar navbar-expand-lg fixed-top navbar-light"
