--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,10 +4,10 @@
 
 </head>
 
-<body position: relative; margin-top: 100px;">
+<body style = "position: relative; margin-top: 100px;">
 
   <%- include('./includes/navbar.ejs') %>
-  <div class="container"">
+  <div class="container">
   
 
     <% if(user.role === 'customer') { %>
