--- a/views/reports.ejs
+++ b/views/reports.ejs
@@ -33,7 +33,7 @@
   
                           <div class="flex-container" style="display: flex;">
                             <div class="font-weight-bold" style="font-weight: 500;">Description:&nbsp;</div>
-                            <div class="font-weight-bold"><%= report.description %>:00 PM </div>
+                            <div class="font-weight-bold"><%= report.description %> </div>
                           </div>
                       </div>
                     </div>
