--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,6 +15,7 @@
 
         <main style="margin-top: 50px;">
         <% for (let session of sessions.booking) { %>
+          <% if( moment(session.dateAndTime).isSame(moment(), "day") || moment(session.dateAndTime).isAfter(moment()) ) {%>
           <div class="container">
             <div class="row" >
               <div class="col-lg-12">
@@ -46,7 +47,7 @@
                         </div>
                       </div>
                       <div class="d-flex justify-content-center align-items-center">
-                        <form action="/video/<%=session.bookingId%><%=user._id%>" method="GET">
+                        <form target="_blank"  action="/video/<%=session.bookingId%><%=user._id%>" method="GET">
                           <% if(moment().utc().format('YYYY-MM-DD HH') === moment(session.dateAndTime).utc().format('YYYY-MM-DD HH')) { %>
                           <button class="btn btn-primary" style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm; margin-right: 10px;">Join</button>
                           <input type="hidden" name="vchat" id="vchat" value="vchat">
@@ -63,6 +64,7 @@
               </div>
             </div>
           </div>
+          <% } %>
         <% } %>
       <% } else { %>
         <h1> No Sessions.</h1>
@@ -105,8 +107,8 @@
                         </div>
                       </div>
                       <div class="d-flex justify-content-center align-items-center">
-                        <% if(moment().utc().format('YYYY-MM-DD') === moment(session.dateAndTime).utc().format('YYYY-MM-DD')) { %>
-                        <form action="/video/<%=user._id%><%=session.bookingId%>" method="GET">
+                        <%if(moment().utc().format('YYYY-MM-DD HH') === moment(session.dateAndTime).utc().format('YYYY-MM-DD HH')) { %>
+                        <form target="_blank" action="/video/<%=user._id%><%=session.bookingId%>" method="GET">
                           <button class="btn btn-primary" style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm; margin-right: 10px;">Join</button>
                           <input type="hidden" name="vchat" id="vchat" value="vchat">
                           <input type="hidden" name="room" id="room" value="<%=user._id%>+<%=session.bookingId%>">
