--- a/views/group-therapy.ejs
+++ b/views/group-therapy.ejs
@@ -44,7 +44,7 @@
 
                         <div class="flex-container" style="display: flex;">
                           <div class="font-weight-bold" style="font-weight: 500;">Duration:&nbsp;</div>
-                          <div class="mb-3">Duration: <%= group.roomDuration %></div>
+                          <div class="mb-3"><%= group.roomDuration %></div>
                         </div>
 
                         <div class="flex-container" style="display: flex;">
@@ -58,7 +58,7 @@
                       
                       <% if(user.role !== 'admin') { %>
                       <% if(String(moment().day()) === group.roomDateInNumber && String(moment().format('h')) === group.roomTime) { %>
-                          <form action="/group-video/depressionandanxiety" method="GET">
+                          <form target="_blank" action="/group-video/depressionandanxiety" method="GET">
                             <button class="btn btn-primary" style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm; margin-right: 10px;">Join</button>
                             <% } else { %>
                             <button disabled class="btn btn-primary" style="background-color: #79B4B7; border-color: #79B4B7; border-radius: 50px; font-size: 1em; padding-right: 1cm; padding-left: 1cm; margin-right: 10px;">Join</button>
