--- a/views/room.ejs
+++ b/views/room.ejs
@@ -15,7 +15,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/video.js" defer></script>
     
-    <title>Document</title>
+    <title>Video Call</title>
     <style>
         #video-grid{
            display: flex;
