--- a/views/therapistAccount.ejs
+++ b/views/therapistAccount.ejs
@@ -109,12 +109,28 @@
                     <% for (let date of availableDates.availableDate) { %>
                         <div class="profile-card" style="margin-left: 30px; margin-right: 30px; margin-bottom: 60px;">
 
-                            <div class="name" style="font-size: 18px;"> Date: <%=
-                                    moment(date.time).format('YYYY-MM-DD hh:mm A') %>
-                            </div>
-                            <div class="about">Duration: <%= date.duration %>
-                            </div>
-                            <p style="margin: 15px;"></p>
+                        <div class="flex-container" style="display: flex;">
+                            <div class="font-weight-bold" style="font-weight: 500;">Date:&nbsp;</div>
+                            <div class="font-weight-bold"><%= moment(date.time).format('YYYY-MM-DD') %> </div>
+                          </div>
+  
+                          <div class="flex-container" style="display: flex;">
+                            <div class="font-weight-bold" style="font-weight: 500;">Time:&nbsp;</div>
+                            <div class="font-weight-bold"><%= moment(date.time).format('HH:mm A') %></div>
+                          </div>
+  
+                          <div class="flex-container" style="display: flex;">
+                            <div class="font-weight-bold" style="font-weight: 500;">Duration:&nbsp;</div>
+                            <div class="mb-3"><%= date.duration %></div>
+                          </div>
+                          
+  
+                          <div class="flex-container" style="display: flex;">
+                            <div class="font-weight-bold" style="font-weight: 500;">Cost:&nbsp;</div>
+                            <div class=""><%= date.cost %></div>
+                          </div>
+                            
+                            <p style="margin: 5px;"></p>
                             <div class="buttons text-center" style="display: inline-block;">
 
                                 <form action="/payment/<%= date._id %>" method="GET">
@@ -122,7 +138,9 @@
                                     <input type="hidden" name="userEmail" value="<%= therapist.email %>">
                                     <input type="hidden" name="date" value="<%= date.time %>">
                                     <input type="hidden" name="duration" value="<%= date.duration %>">
+                                    <input type="hidden" name="cost" value="<%= date.cost %>">
                                     <input type="hidden" name="sessionId" value="<%= date._id %>">
+                                    
                                 </form>
 
                             </div>
