--- a/views/user-profile.ejs
+++ b/views/user-profile.ejs
@@ -116,12 +116,28 @@
                         <% for (let date of user.availableDates.availableDate) { %>
                             <div class="profile-card" style="margin-left: 30px; margin-right: 30px; margin-bottom: 60px;">
     
-                                <div class="name" style="font-size: 18px;"> Date: <%=
-                                        moment(date.time).format('YYYY-MM-DD hh:mm A') %>
-                                </div>
-                                <div class="about">Duration: <%= date.duration %>
-                                </div>
-                                <p style="margin: 15px;"></p>
+                                <div class="flex-container" style="display: flex;">
+                                    <div class="font-weight-bold" style="font-weight: 500;">Date:&nbsp;</div>
+                                    <div class="font-weight-bold"><%= moment(date.time).format('YYYY-MM-DD') %> </div>
+                                  </div>
+          
+                                  <div class="flex-container" style="display: flex;">
+                                    <div class="font-weight-bold" style="font-weight: 500;">Time:&nbsp;</div>
+                                    <div class="font-weight-bold"><%= moment(date.time).format('HH:mm A') %></div>
+                                  </div>
+          
+                                  <div class="flex-container" style="display: flex;">
+                                    <div class="font-weight-bold" style="font-weight: 500;">Duration:&nbsp;</div>
+                                    <div class="mb-3"><%= date.duration %></div>
+                                  </div>
+                                  
+          
+                                  <div class="flex-container" style="display: flex;">
+                                    <div class="font-weight-bold" style="font-weight: 500;">Cost:&nbsp;</div>
+                                    <div class=""><%= date.cost %></div>
+                                  </div>
+
+                                <p style="margin: 5px;"></p>
                                 <div class="buttons text-center" style="display: inline-block;">
     
                                     <form action="/delete-session/<%=date._id%>" method="POST">
