--- a/views/forgot-password.ejs
+++ b/views/forgot-password.ejs
@@ -2,7 +2,7 @@
      <link rel="stylesheet" href="/css/main.css">
      </head>
 
-     <body>
+     <body style="background-color: #FEFBF3;">
           <div class="navbar navbar-expand-lg fixed-top navbar-light"
                style="background-color: #FEFBF3; box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);">
                <div class="container">
